[gd_scene load_steps=21 format=3 uid="uid://dkwwhk8anason"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_8wj7i"]
[ext_resource type="Texture2D" uid="uid://dnvioo8x6ucif" path="res://Artworks/tiles.svg" id="2_5p0t0"]
[ext_resource type="PackedScene" uid="uid://du4o5eqhl2lbn" path="res://Scenes/player.tscn" id="3_41ri0"]
[ext_resource type="Texture2D" uid="uid://ubmc2cjl4fdx" path="res://Artworks/HUD/hammenu.png" id="3_jm607"]
[ext_resource type="Texture2D" uid="uid://cujtp302kb26p" path="res://Artworks/bg.png" id="3_ytdvf"]
[ext_resource type="PackedScene" uid="uid://mcnoqy45u1b2" path="res://Scenes/ball.tscn" id="6_g3naj"]
[ext_resource type="Script" path="res://Scripts/healthview.gd" id="10_6i3d8"]
[ext_resource type="FontFile" uid="uid://c51wwnysc63o7" path="res://Artworks/Fonts/GeneraleStation-Regular.otf" id="10_chf4s"]
[ext_resource type="PackedScene" uid="uid://dd5i5w6fov0ag" path="res://Scenes/game_over_layer.tscn" id="11_etfyp"]
[ext_resource type="PackedScene" uid="uid://c7hqrgrfuvsrk" path="res://Scenes/in_game_menu.tscn" id="12_jurt7"]
[ext_resource type="Texture2D" uid="uid://borimbqnx8p34" path="res://Artworks/HUD/heart_full.png" id="13_mjpwm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_34rca"]
texture = ExtResource("2_5p0t0")
margins = Vector2i(32, 32)
separation = Vector2i(16, 16)
texture_region_size = Vector2i(80, 80)
use_texture_padding = false
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:0/0 = 0
3:3/0 = 0
4:5/0 = 0
0:2/0 = 0
0:0/0 = 0
2:1/0 = 0
3:1/0 = 0
2:2/0 = 0
1:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:2/0 = 0
4:3/0 = 0
4:2/0 = 0
4:1/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_etutn"]
sources/0 = SubResource("TileSetAtlasSource_34rca")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcjve"]
size = Vector2(2664, 213)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbmbx"]
size = Vector2(25, 1030)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6144o"]
size = Vector2(25, 1032)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8m80"]
size = Vector2(2395, 14)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_13seg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hjhkh"]

[sub_resource type="LabelSettings" id="LabelSettings_4wluw"]
font = ExtResource("10_chf4s")
font_size = 30
font_color = Color(0, 0, 0, 1)
shadow_size = 2

[node name="Main" type="Node2D"]
script = ExtResource("1_8wj7i")

[node name="GameOver_Layout" parent="." instance=ExtResource("11_etfyp")]
process_mode = 2
visible = false

[node name="InGameMenu" parent="." instance=ExtResource("12_jurt7")]
process_mode = 2
process_priority = 100
visible = false
follow_viewport_enabled = true

[node name="Game" type="Node" parent="."]

[node name="Player" parent="Game" instance=ExtResource("3_41ri0")]
z_index = 2
position = Vector2(484, 471)

[node name="TileMap" type="TileMap" parent="Game"]
tile_set = SubResource("TileSet_etutn")
format = 2
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(2555906, 0, 0, 2555910, 0, 0, 2555914, 0, 0, 2555918, 0, 0, 2555922, 0, 0, 2555926, 0, 0, 2555930, 0, 0, 2555934, 0, 0, 2555938, 0, 0, 2555942, 0, 0, 2555946, 0, 0, 2555950, 0, 0, 2555954, 0, 0, 2555958, 0, 0, 2555962, 0, 0, 2555966, 0, 0, 2555970, 0, 0, 2555974, 0, 0, 2555978, 0, 0, 2555982, 0, 0, 2555986, 0, 0, 2621438, 0, 0, 2621434, 0, 0, 2621430, 0, 0, 2621426, 0, 0, 2621422, 0, 0, 2621418, 0, 0, 2818049, 196608, 0, 2818053, 196608, 0, 2818057, 196608, 0, 2818061, 196608, 0, 2818065, 196608, 0, 2818069, 196608, 0, 2818073, 196608, 0, 2818077, 196608, 0, 2818081, 196608, 0, 2818085, 196608, 0, 2818089, 196608, 0, 2818093, 196608, 0, 2818097, 196608, 0, 2818102, 196608, 0, 2818101, 196608, 0, 2818106, 196608, 0, 2818110, 196608, 0, 2818114, 196608, 0, 2883581, 196608, 0, 2818118, 196608, 0, 2818122, 196608, 0, 2883577, 196608, 0, 3145721, 196608, 3, 3145725, 196608, 3, 3080193, 196608, 3, 3080197, 196608, 3, 3080201, 196608, 3, 3080205, 196608, 3, 2883573, 196608, 3, 2883569, 196608, 3, 2883565, 196608, 3, 2883561, 196608, 3, 3080209, 196608, 3, 3145717, 196608, 3, 3145713, 196608, 3, 3145709, 196608, 3, 3145705, 196608, 3, 3080213, 196608, 3, 3080217, 196608, 3, 3080221, 196608, 3, 3080225, 196608, 3, 3080228, 196608, 3, 3080232, 196608, 3, 3080236, 196608, 3, 3080240, 196608, 3, 3080244, 196608, 3, 2818126, 196608, 3, 2818130, 196608, 0, 3080248, 196608, 3, 3080252, 196608, 3, 3080256, 196608, 3, 3080260, 196608, 3, 3080264, 196608, 3, 3080267, 196608, 3, 3080271, 196608, 3, 3080274, 196608, 3, 2883562, 196608, 3, 3145706, 196608, 3, 2555990, 0, 0, 2555994, 0, 0, 2555998, 0, 0, 2556002, 0, 0, 2556006, 0, 0, 2556010, 0, 0, 2818127, 196608, 0, 2818125, 196608, 0, 2818124, 196608, 0, 2818134, 196608, 0, 2818138, 196608, 0, 2818142, 196608, 0, 2818147, 196608, 0, 2818146, 196608, 0, 2818151, 196608, 0, 2818155, 196608, 0, 3080278, 196608, 3, 3080282, 196608, 3, 3080286, 196608, 3, 3080290, 196608, 3, 3080294, 196608, 3, 3080298, 196608, 3, 2818158, 196608, 3, 3080302, 196608, 3, 2556014, 0, 0)

[node name="Background" type="Node" parent="Game"]

[node name="Bg" type="Sprite2D" parent="Game/Background"]
z_index = -1
position = Vector2(234, 451)
texture = ExtResource("3_ytdvf")

[node name="Bg2" type="Sprite2D" parent="Game/Background"]
position = Vector2(1239, 453)
texture = ExtResource("3_ytdvf")

[node name="Soil" type="StaticBody2D" parent="Game"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Soil"]
position = Vector2(704, 706.5)
shape = SubResource("RectangleShape2D_dcjve")
debug_color = Color(0.854902, 0.270588, 0.639216, 0.419608)

[node name="Ball" parent="Game" instance=ExtResource("6_g3naj")]
position = Vector2(356, 85)

[node name="Boundary" type="Node" parent="Game"]

[node name="Left_Boundary_Control" type="Control" parent="Game/Boundary"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = -680.0
grow_vertical = 2

[node name="Left_Boundary" type="StaticBody2D" parent="Game/Boundary/Left_Boundary_Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Boundary/Left_Boundary_Control/Left_Boundary"]
position = Vector2(0.5, 327)
shape = SubResource("RectangleShape2D_fbmbx")

[node name="Right_Boundary_Control" type="Control" parent="Game/Boundary"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1080.0
offset_right = -1040.0
offset_bottom = -680.0
grow_horizontal = 0
grow_vertical = 2

[node name="Right_Boundary" type="StaticBody2D" parent="Game/Boundary/Right_Boundary_Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Boundary/Right_Boundary_Control/Right_Boundary"]
position = Vector2(1077.5, 319)
shape = SubResource("RectangleShape2D_6144o")

[node name="Top_Boundary_Control" type="Control" parent="Game/Boundary"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_right = -1040.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Top_Boundary" type="StaticBody2D" parent="Game/Boundary/Top_Boundary_Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Boundary/Top_Boundary_Control/Top_Boundary"]
position = Vector2(680.5, -3)
shape = SubResource("RectangleShape2D_s8m80")

[node name="Touch_Controls" type="Control" parent="Game"]
visible = false
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Touch_Control_Left" type="Control" parent="Game/Touch_Controls"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Left_Button" type="Button" parent="Game/Touch_Controls/Touch_Control_Left"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_13seg")
flat = true

[node name="Touch_Control_Right" type="Control" parent="Game/Touch_Controls"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Right_Button" type="Button" parent="Game/Touch_Controls/Touch_Control_Right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_hjhkh")
flat = true

[node name="Menu_Control" type="Control" parent="Game"]
layout_mode = 3
anchors_preset = 0
offset_right = 61.0
offset_bottom = 61.0

[node name="InGameMenuButton" type="Button" parent="Game/Menu_Control"]
layout_mode = 0
scale = Vector2(0.6, 0.6)
theme_type_variation = &"FlatButton"
icon = ExtResource("3_jm607")

[node name="HUD" type="Node" parent="Game"]

[node name="Score_Control" type="Control" parent="Game/HUD"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_top = 7.0
offset_bottom = 62.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Score_Label" type="Label" parent="Game/HUD/Score_Control"]
layout_mode = 1
offset_right = 88.0
offset_bottom = 37.0
text = "0000"
label_settings = SubResource("LabelSettings_4wluw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health_Control" type="Control" parent="Game/HUD"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Game/HUD/Health_Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_right = 376.0
offset_bottom = 55.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_top = 10

[node name="Health_Container" type="HBoxContainer" parent="Game/HUD/Health_Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
script = ExtResource("10_6i3d8")

[node name="1" type="TextureRect" parent="Game/HUD/Health_Control/MarginContainer/Health_Container"]
layout_mode = 2
texture = ExtResource("13_mjpwm")

[node name="2" type="TextureRect" parent="Game/HUD/Health_Control/MarginContainer/Health_Container"]
layout_mode = 2
texture = ExtResource("13_mjpwm")

[node name="3" type="TextureRect" parent="Game/HUD/Health_Control/MarginContainer/Health_Container"]
layout_mode = 2
texture = ExtResource("13_mjpwm")

[node name="4" type="TextureRect" parent="Game/HUD/Health_Control/MarginContainer/Health_Container"]
layout_mode = 2
texture = ExtResource("13_mjpwm")

[node name="5" type="TextureRect" parent="Game/HUD/Health_Control/MarginContainer/Health_Container"]
layout_mode = 2
texture = ExtResource("13_mjpwm")

[connection signal="go_menu_click" from="GameOver_Layout" to="." method="_on_game_over_layout_go_menu_click"]
[connection signal="restart_click" from="GameOver_Layout" to="." method="_on_game_over_layout_restart_click"]
[connection signal="ig_mainmenu_click" from="InGameMenu" to="." method="_on_in_game_menu_ig_mainmenu_click"]
[connection signal="ig_retry_click" from="InGameMenu" to="." method="_on_in_game_menu_ig_retry_click"]
[connection signal="ig_return_click" from="InGameMenu" to="." method="_on_in_game_menu_ig_return_click"]
[connection signal="ball_hit" from="Game/Player" to="." method="_on_player_ball_hit"]
[connection signal="hit_ground" from="Game/Ball" to="." method="_on_ball_hit_ground"]
[connection signal="button_down" from="Game/Touch_Controls/Touch_Control_Left/Left_Button" to="." method="_on_left_button_button_down"]
[connection signal="button_up" from="Game/Touch_Controls/Touch_Control_Left/Left_Button" to="." method="_on_left_button_button_up"]
[connection signal="button_down" from="Game/Touch_Controls/Touch_Control_Right/Right_Button" to="." method="_on_right_button_button_down"]
[connection signal="button_up" from="Game/Touch_Controls/Touch_Control_Right/Right_Button" to="." method="_on_right_button_button_up"]
[connection signal="pressed" from="Game/Menu_Control/InGameMenuButton" to="." method="_on_in_game_menu_button_pressed"]
